feat: podcast, chat (#17)
